Used supplied jQuery 1.9 not 1.7

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <title>JamesMonkey - Diamond Blowup YouTube channel</title>
 
-	<script src="http://code.jquery.com/jquery-1.7.min.js"></script>
-	<script src="./js/youmax.js"></script>
-	<link rel="stylesheet" href="./css/youmax.css"/>
+	<script src="jquery/jquery-1.9.1.min.js"></script>
+	<script src="js/youmax.js"></script>
+	<link rel="stylesheet" href="css/youmax.css"/>
 
 	<style>
 
@@ -45,8 +45,6 @@
 			maxResults:15,
 
 		});
-
-
 	</script>
 
   </body>
